Update Exercise 1 q.e-i.ipynb

--- a/Projects/1. Enzyme and microbial kinetics/Exercise 1 q.e-i.ipynb
+++ b/Projects/1. Enzyme and microbial kinetics/Exercise 1 q.e-i.ipynb
@@ -424,7 +424,7 @@
     "plt.plot(t, CE, t, CS, t, CES, t, CP, t, CP_1)\n",
     "plt.xlabel(\"time [s]\", size=15)\n",
     "plt.ylabel(\"Ci [mol/l]\", size=15)\n",
-    "plt.xlim([0, 0.1])",
+    "plt.xlim([0, 0.1])\n",
     "plt.legend([\"E\", \"S\", \"ES\", \"P\", \"P'\"])\n",
     "\n",
     "plt.grid()\n",
