Code should be finished, need to check all equations

--- a/Projects/2. Enzyme kinetics and microbial growth/Exercise 4.ipynb
+++ b/Projects/2. Enzyme kinetics and microbial growth/Exercise 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -529,16 +529,30 @@
     }
    ],
    "source": [
+    "def calc_prod(D, Ks, S0, D_max, Y_XS, m):\n",
+    "    \"\"\"Calculate productivity as a function of dilution rate\n",
+    "\n",
+    "    Args:\n",
+    "        D (numpy.ndarray): dilution rate\n",
+    "        X (numpy.ndarray): cell concentration\n",
+    "\n",
+    "    Returns:\n",
+    "        prod (numpy.ndarray): productivity\n",
+    "    \"\"\"\n",
+    "    X = calc_X(D, Ks, S0, D_max, Y_XS, m)\n",
+    "    prod = D*X\n",
+    "\n",
+    "    return prod\n",
+    "\n",
     "# Create multiple Ks\n",
     "Ks_model = np.array([Ks/4, Ks/2, Ks, Ks*2, Ks*4])\n",
     "\n",
-    "# Calculate X and DX for each Ks\n",
+    "# Calculate productivity for each Ks\n",
     "for x in range(len(Ks_model)):\n",
-    "    X_model = calc_X(D_model, Ks_model[x], S0, D_max, Y_XS, m)\n",
-    "    DX_model = D_model*X_model\n",
+    "    prod_model = calc_prod(D_model, Ks_model[x], S0, D_max, Y_XS, m) # g/L/h\n",
     "\n",
     "    # Lines\n",
-    "    plt.plot(D_model, DX_model, label = f'{Ks_model[x]/Ks} Ks')\n",
+    "    plt.plot(D_model, prod_model, label = f'{Ks_model[x]/Ks} Ks')\n",
     "plt.grid(linewidth = 0.25)\n",
     "\n",
     "# Delimitations\n",
@@ -568,26 +582,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D[X]ₘₐₓ = 3.64 g.L⁻¹.s⁻¹\n",
-      "Dₒₚₜ = 0.79 h⁻¹\n"
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3881355417.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[18], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    def calc_prod_max()\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
      ]
     }
    ],
    "source": [
-    "X_model = (D_model*Y_XS*(D_model*(Ks + S0) - D_max*S0))/((D_model - D_max)*(D_model + m*Y_XS))\n",
-    "DX_model = D_model*np.where(X_model >= 0, X_model, 0)\n",
-    "    \n",
-    "DX_max_model = np.max(DX_model)\n",
-    "D_opt_model = D_model[DX_model == DX_max_model][0]\n",
+    "prod_max_model = np.max(prod_model)\n",
+    "D_opt_model = D_model[prod_model == prod_max_model][0]\n",
     "\n",
-    "print(f\"D[X]ₘₐₓ = {round(DX_max_model, 2)} g.L⁻¹.s⁻¹\\nDₒₚₜ = {round(D_opt_model, 2)} h⁻¹\")"
+    "print(f\"D[X]ₘₐₓ = {round(prod_max_model, 2)} g.L⁻¹.s⁻¹\\nDₒₚₜ = {round(D_opt_model, 2)} h⁻¹\")"
    ]
   },
   {
@@ -601,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
