Finished code with comment, added images folder

--- a/Projects/2. Enzyme kinetics and microbial growth/Exercise 4.ipynb
+++ b/Projects/2. Enzyme kinetics and microbial growth/Exercise 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -398,11 +398,11 @@
    "source": [
     "The operating range for $D$ is between 0 and $D_{max}$.\n",
     "\n",
-    "Computation of substrate concentration as a function of dilution rate is easily doable using the Monod\"s equation:\n",
+    "Computation of substrate concentration as a function of dilution rate is easily doable using the Monod's equation:\n",
     "\n",
     "* $S = D \\cdot \\frac{K_s}{D_{max} - D}$\n",
     "\n",
-    "Computation of cell concentration as a function can be done by first expressing the consumption rate of substrate as a function of $[D]$ and $X$:\n",
+    "Computation of cell concentration as a function of dilution rate can be done by first expressing the consumption rate of substrate as a function of $[D]$ and $X$:\n",
     "\n",
     "* $r_S = D \\cdot \\frac{X}{Y_{X/S}} + m \\cdot X$\n",
     "\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
