Correction for image

--- a/Projects/3. Design of fed-batch bioreactors/Exercise1.ipynb
+++ b/Projects/3. Design of fed-batch bioreactors/Exercise1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "798d141c-32ee-4a99-900d-b7bab6353c21",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "\" OLD CODE\\nimport numpy as np\\nimport matplotlib.pyplot as plt\\n\\nS0 = 2\\nYxs = 0.5\\nmu_m = 1\\nKs = 0.01\\nalpha_range = np.array([0.1, 0.2, 0.4, 0.6, 0.8, 0.9])\\nC = 2\\n\\ndef mu(S):\\n    return mu_m * S / (S + Ks)\\n\\ndef mu_s(S):\\n    return mu(S) / Yxs\\n    \\ndef D(S, alpha):\\n    return mu(S) / (1 + alpha * (1 - C))\\n\\ndef cellX1(S, alpha):\\n    return D(S, alpha) * (S0 - S) / mu_s(S)\\n\\ndef cellX2(S, alpha):\\n    return cellX1(S, alpha) * (1 + alpha * (1 - C))\\n\\n\\nS = np.linspace(0.001, 2, 1000)\\n\\nfig, axs = plt.subplots(1, 2, figsize=(16, 6))\\nfor i, alph in enumerate(alpha_range):\\n    axs[0].plot(D(S, alph), cellX1(S, alph), label=f'alpha={alph}')\\n    axs[1].plot(D(S, alph), cellX2(S, alph), label=f'alpha={alph}')\\n\\naxs[0].set_xlabel(r'$D\\\\ (s^{-1})$', fontsize=16)\\naxs[0].set_ylabel('Cell X1', fontsize=16)\\naxs[0].set_title('D vs Cell X1', fontsize=16)\\naxs[0].legend(fontsize=14)\\n\\naxs[1].set_xlabel(r'$D\\\\ (s^{-1})$', fontsize=16)\\naxs[1].set_ylabel('Cell X2', fontsize=16)\\naxs[1].set_title('D vs Cell X2', fontsize=16)\\naxs[1].legend(fontsize=14)\\n\\nplt.show()\\n \""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "2c0199be",
    "metadata": {},
    "outputs": [
@@ -76,9 +76,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jrjon\\AppData\\Local\\Temp\\ipykernel_30416\\1455211599.py:15: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\Users\\jrjon\\AppData\\Local\\Temp\\ipykernel_30416\\740771439.py:15: RuntimeWarning: divide by zero encountered in divide\n",
       "  return Ks*mu/(mu_m - mu)\n",
-      "C:\\Users\\jrjon\\AppData\\Local\\Temp\\ipykernel_30416\\1455211599.py:21: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\jrjon\\AppData\\Local\\Temp\\ipykernel_30416\\740771439.py:21: RuntimeWarning: invalid value encountered in divide\n",
       "  return Yxs*rs/mu\n"
      ]
     },
@@ -91,13 +91,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
-     ]
     },
     {
      "data": {
@@ -170,9 +163,9 @@
     "axs[1].set_ylim(0)\n",
     "axs[1].legend(fontsize=14)\n",
     "\n",
-    "plt.show()\n",
+    "plt.savefig(\"Images\\\\1.f.1.eps\", format = \"eps\")\n",
     "\n",
-    "#plt.savefig(\"Images\\\\1.f.1.eps\", format = \"eps\")\n",
+    "plt.show()\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, figsize=(16, 6))\n",
     "for i, alph in enumerate(alpha):\n",
@@ -206,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "75b5bf0a-a163-4447-b83c-6b5c0c321e06",
    "metadata": {},
    "outputs": [
@@ -216,7 +209,7 @@
        "\"OLD CODE\\nimport numpy as np\\nimport matplotlib.pyplot as plt\\n\\nS0 = 2\\nYxs = 0.5\\nmu_m = 1\\nKs = 0.01\\nalpha_range = np.array([0.1, 0.2, 0.4, 0.6, 0.8, 0.9])\\nC = 2\\n\\ndef mu(D, alpha):\\n    return D*(1+alpha*(1-C))\\n\\ndef mu_s(D, alpha):\\n    return mu(D, alpha) / Yxs\\n\\ndef S(D, alpha):\\n    return (D*Ks*(1+alpha*(1-C)))/(mu_m-D*(1+alpha*(1-C)))\\n    \\ndef cellX1(D, alpha):\\n    return D * (S0 - S(D, alpha)) / mu_s(D, alpha)\\n\\ndef cellX2(D, alpha):\\n    return cellX1(D, alpha) * (1 + alpha * (1 - C))\\n\\n\\nD = np.linspace(0.001, 1, 1000)\\n\\nfig, axs = plt.subplots(1, 2, figsize=(16, 6))\\nfor i, alph in enumerate(alpha_range):\\n    axs[0].plot(D, cellX1(D, alph), label=f'alpha={alph}')\\n    axs[1].plot(D, cellX2(D, alph), label=f'alpha={alph}')\\n\\naxs[0].set_xlabel(r'$D\\\\ (s^{-1})$', fontsize=16)\\naxs[0].set_ylabel('Cell X1', fontsize=16)\\naxs[0].set_title('D vs Cell X1', fontsize=16)\\naxs[0].legend(fontsize=14)\\n\\naxs[1].set_xlabel(r'$D\\\\ (s^{-1})$', fontsize=16)\\naxs[1].set_ylabel('Cell X2', fontsize=16)\\naxs[1].set_title('D vs Cell X2', fontsize=16)\\naxs[1].legend(fontsize=14)\\n\\nplt.show()\\n \""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
